Fix spacing problem with line wrap

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -232,7 +232,7 @@ textarea {
 
 #menu ul {
     margin: 0;
-    padding: 0 0 0 15px;
+    padding: 0 0 0 7px;
     list-style: none;
     line-height: normal;
 }
